--- a/package.json
+++ b/package.json
@@ -6,11 +6,25 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "apexcharts": "^3.17.1",
     "axios": "^0.19.2",
+    "chart.js": "^2.9.3",
+    "chartjs-plugin-datalabels": "^0.7.0",
+    "d3": "^5.15.1",
+    "fetch": "^1.1.0",
     "react": "^16.13.1",
+    "react-apexcharts": "^1.3.7",
+    "react-bootstrap": "^1.0.0",
+    "react-chartjs-2": "^2.9.0",
+    "react-charts": "^2.0.0-beta.6",
     "react-dom": "^16.13.1",
+    "react-mini-chart": "^0.1.3",
+    "react-minimal-pie-chart": "^7.0.0",
+    "react-modal": "^3.11.2",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "react-slick": "^0.25.2",
+    "slick-carousel": "^1.8.1"
   },
   "scripts": {
     "start": "react-scripts start",
