create-react-buildpack.

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^7.2.1",
     "apexcharts": "^3.17.1",
     "axios": "^0.19.2",
+    "britecharts-react": "^0.5.3",
     "chart.js": "^2.9.3",
     "chartjs-plugin-datalabels": "^0.7.0",
     "d3": "^5.15.1",
