--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "chartjs-plugin-datalabels": "^0.7.0",
     "d3": "^5.15.1",
     "fetch": "^1.1.0",
+    "fusioncharts": "^3.15.1-sr.1",
     "react": "^16.13.1",
     "react-apexcharts": "^1.3.7",
     "react-bootstrap": "^1.0.0",
     "react-chartjs-2": "^2.9.0",
     "react-charts": "^2.0.0-beta.6",
     "react-dom": "^16.13.1",
+    "react-fusioncharts": "^3.1.2",
     "react-mini-chart": "^0.1.3",
     "react-minimal-pie-chart": "^7.0.0",
     "react-modal": "^3.11.2",
